Binary Search Algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /SearchAlgorithms/nbproject/private/
 /SearchAlgorithms/build/
 /linearsearchapp/nbproject/private/
+/BinarySearch/nbproject/private/
+/BinarySearch/build/
