--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /linearsearchapp/nbproject/private/
 /BinarySearch/nbproject/private/
 /BinarySearch/build/
+/BubbleSort_DSA/nbproject/private/
+/BubbleSort_DSA/build/
