Added Factorial to RecursionPractice

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /BinarySearch/build/
 /BubbleSort_DSA/nbproject/private/
 /BubbleSort_DSA/build/
+/RecursionPractice/nbproject/private/
+/RecursionPractice/build/
