Completed Task for Ahmad Sayyab

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /BubbleSort_DSA/build/
 /RecursionPractice/nbproject/private/
 /RecursionPractice/build/
+/SayyabJan/RecursionDemos/target/
+/SayyabJan/recursiondemos/build/
+/SayyabJan/recursiondemos/nbproject/private/
